# non_fungible_labs_assignment

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: check.yml
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/simple_oracle/: Cargo.toml
pallets/simple_oracle/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: docker_run.sh
